<resources>
    <string name="app_name">Haunt</string>
    <string name="logo">HAUNT</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_text">log in</string>
    <string name="or_text">OR</string>
    <string name="create_text">Sign up</string>
    <string name="next_text">next</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>
    <string name="height_hint">Height</string>
    <string name="birthday_hint">Birthday</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="browse_no_users">You\'re new here! Check back later for more potential matches.</string>
    <string name="astro_signs">Cancer / Leo / Libra</string>
    <string name="users_compat">Compatibility: X</string>
    <string name="users_blurb">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna alquam erat volutpat.</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_matches">View Matches</string>
    <string name="menu_signout">Signout</string>
    <string name="user_profile_picture_desc">user profile picture</string>
    <string name="dislike_user_button_desc">dislike user button</string>
    <string name="like_user_button_desc">like user button</string>
    <string name="name_user_profile">Name</string>
    <string name="no_matches">No matches yet! Keep browsing...</string>
    <string name="match_name">Name</string>
    <string name="birthday">select birthday</string>
    <string name="callee">Enter your match\'s name to call!</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="about_me">Tell me about yourself:</string>
    <string name="have_kids">Do you have kids?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prefer_not">Prefer not to say</string>
    <string name="sometimes">Sometimes</string>
    <string name="gender">Gender (check all that apply):</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="androgynous">Androgynous</string>
    <string name="binary">Binary</string>
    <string name="enby">Enby</string>
    <string name="female_to_male">Female to Male</string>
    <string name="male_to_female">Male to Female</string>
    <string name="gender_fluid">Gender Fluid</string>
    <string name="gender_neutral">Gender Neutral</string>
    <string name="gender_nonconf">Gender Nonconforming</string>
    <string name="gender_quest">Gender Questioning</string>
    <string name="gender_variant">Gender Variant</string>
    <string name="genderqueer">Genderqueer</string>
    <string name="intersex">Intersex</string>
    <string name="non_binary">Nonbinary</string>
    <string name="pangender">Pangender</string>
    <string name="polygender">Polygender</string>
    <string name="trans">Trans</string>
    <string name="trans_man">Trans Man</string>
    <string name="trans_woman">Trans Woman</string>
    <string name="trans_person">Trans Person</string>
    <string name="two_spirit">Two Spirit</string>
    <string name="hijra">Hijra</string>
    <string name="agender">Agender</string>
    <string name="missing">Are we missing something?</string>
    <string name="everyone">Everyone</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="intersted">Who do you want to date?</string>
    <string name="view_matches">View Matches</string>
    <string name="matched">It\'s a match!</string>
    <string name="keep_browsing">Keep browsing</string>
    <string name="match_toast">It\'s a match!</string>
    <string name="do_you_drink">Do you drink?</string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="do_you_do_drugs">Do you do drugs?</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="astro_rising">Libra</string>
    <string name="astro_moon">Leo</string>
    <string name="astro_sun">Cancer</string>
    <string name="age">29</string>
    <string name="height">5\'10</string>
    <string name="kids">Yes</string>
    <string name="drinking">Sometimes</string>
    <string name="smoking">No</string>
</resources>
