<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_browse"
        android:title="@string/menu_browse"
        app:showAsAction="never" />

    <item android:id="@+id/action_matches"
        android:title="@string/menu_matches"
        app:showAsAction="never" />

    <item android:id="@+id/action_signout"
        android:title="@string/menu_signout"
        app:showAsAction="never" />
    <item android:id="@+id/speaker_menu_item"
        android:title="@string/turn_speaker_on"
        android:icon="@drawable/ic_volume_up_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>

    <!--android:icon="@android:drawable/stat_sys_phone_call"-->
    <!--android:icon="@android:drawable/ic_dialog_dialer"-->

