<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateUserProfileActivity">

    <ProgressBar
        android:id="@+id/create_user_profile_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/create_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/last_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/gender_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/gender_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/height_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/height_hint"
            android:inputType="textNoSuggestions"
            android:maxLines="1" />

        <Button
            android:id="@+id/birthday_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:background="@drawable/blue_border_button"
            android:textColor="@color/mid_blue"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="24sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_image_button"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:srcCompat="@android:drawable/ic_menu_camera"/>


            <!--<ImageView-->
                <!--android:id="@+id/add_image_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="75dp" />-->

        </LinearLayout>

        <Button
            android:id="@+id/create_user_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next_text"
            android:background="@drawable/basic_button"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>