<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddUserPreferencesActivity">

    <ProgressBar
        android:id="@+id/preferences_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/interested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/apercu_bold_italic"
            android:text="@string/intersted"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/men"
                    android:layout_width="100dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button"
                    android:paddingTop="10dp"
                    android:paddingBottom="12dp"
                    android:button="@null"
                    android:text="@string/men"
                    android:textColor="@drawable/button_text_color"
                    android:textSize="16sp"
                    android:onClick="onRadioPrefButtonClicked"/>
                <RadioButton android:id="@+id/women"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="12dp"
                    android:background="@drawable/radio_button"
                    android:textColor="@drawable/button_text_color"
                    android:button="@null"
                    android:text="@string/women"
                    android:textSize="16sp"
                    android:onClick="onRadioPrefButtonClicked"/>
                <RadioButton android:id="@+id/everyone"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="12dp"
                    android:button="@null"
                    android:background="@drawable/radio_button"
                    android:textColor="@drawable/button_text_color"
                    android:text="@string/everyone"
                    android:textSize="16sp"
                    android:onClick="onRadioPrefButtonClicked"/>
            </RadioGroup>
        </RelativeLayout>



        <Button
            android:id="@+id/prefs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next_text"
            android:background="@drawable/basic_button"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>