<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAccount">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:theme="@style/LoginEditTextTheme"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditTextTheme"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/create_acct_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_brdr_selector"
            android:text="@string/create_text"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>